--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,9 @@
-SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
-BRAIN_TOKENS=token1,token2,token3
+SUPABASE_URL=
+SUPABASE_SERVICE_ROLE_KEY=
+BRAIN_TOKENS=local-dev-token
 EMBED_PROVIDER=openai
-OPENAI_API_KEY=sk-your-key-here
+OPENAI_API_KEY=
 OPENAI_EMBED_MODEL=text-embedding-3-small
+ALLOWED_HOSTS=
+ALLOWED_ORIGINS=
 PORT=3000
-NODE_ENV=development
-ALLOWED_ORIGINS=https://adjoining-multimolecular-ursula.ngrok-free.dev,http://localhost:3000
-ALLOWED_HOSTS=adjoining-multimolecular-ursula.ngrok-free.dev,localhost
-RATE_LIMIT_WINDOW_MS=60000
-RATE_LIMIT_MAX_REQUESTS=120
