--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "dependencies": {
-    "@ngrok/ngrok": "^1.7.0",
-    "@supabase/supabase-js": "^2.89.0",
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "mem0ai": "^1.0.39"
-  },
   "name": "gaing-brain",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
+  "type": "module",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "seed:members": "node scripts/seed-members.js",
-    "health:db": "node scripts/health-check.js",
-    "test": "node scripts/smoke-test.js"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs"
+  "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.20.2",
+    "@supabase/supabase-js": "^2.49.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.4.1",
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0",
+    "openai": "^4.73.0",
+    "zod": "^3.23.8"
+  }
 }
