--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,36 +1,196 @@
-name: CI
+name: gAIng-Brain CI/CD
 
 on:
   push:
-    branches: ["main"]
+    branches: [main, develop]
   pull_request:
+    branches: [main]
+
+env:
+  NODE_VERSION: '20'
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build-test:
+  # =============================================================================
+  # Lint & Security Scan
+  # =============================================================================
+  lint:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node
+      - uses: actions/checkout@v4
+      
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
-          cache: "npm"
-
-      - name: Install
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+      
+      - name: Install dependencies
         run: npm ci
+      
+      - name: Run ESLint
+        run: npm run lint --if-present
+        continue-on-error: true
+      
+      - name: Security scan (audit)
+        run: npm audit --audit-level=high
+        continue-on-error: true
+      
+      - name: Security scan (bidi)
+        run: npm run security:scan-bidi --if-present
+        continue-on-error: true
 
-      - name: Security scan (bidi/hidden unicode)
-        run: npm run security:scan-bidi
+  # =============================================================================
+  # Backend Tests
+  # =============================================================================
+  test-backend:
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+      
+      - name: Install dependencies
+        run: npm ci
+      
+      - name: Run smoke tests
+        run: npm test
+        env:
+          NODE_ENV: test
+      
+      - name: Health check
+        run: npm run health:db --if-present
+        continue-on-error: true
 
-      - name: Backend tests
-        run: npm test --if-present
+  # =============================================================================
+  # Frontend Build & Test
+  # =============================================================================
+  test-frontend:
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+      
+      - name: Install root dependencies
+        run: npm ci
+      
+      - name: Install frontend dependencies
+        run: cd frontend && npm ci
+      
+      - name: Lint frontend
+        run: cd frontend && npm run lint --if-present
+        continue-on-error: true
+      
+      - name: Build frontend
+        run: cd frontend && npm run build
+      
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-build
+          path: public/vision-pwa/
+          retention-days: 7
 
-      - name: Frontend install + build (if present)
+  # =============================================================================
+  # Jarvis Build
+  # =============================================================================
+  build-jarvis:
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+      
+      - name: Install Jarvis dependencies
+        run: cd Jarvis && npm ci
+      
+      - name: Build Jarvis
+        run: cd Jarvis && npm run build
+      
+      - name: Upload Jarvis build
+        uses: actions/upload-artifact@v4
+        with:
+          name: jarvis-build
+          path: Jarvis/.next/
+          retention-days: 7
+
+  # =============================================================================
+  # Docker Build
+  # =============================================================================
+  docker:
+    runs-on: ubuntu-latest
+    needs: [test-backend, test-frontend]
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Download frontend build
+        uses: actions/download-artifact@v4
+        with:
+          name: frontend-build
+          path: public/vision-pwa/
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Log in to Container Registry
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch
+            type=sha
+            type=raw,value=latest,enable={{is_default_branch}}
+      
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  # =============================================================================
+  # Deploy (on main branch)
+  # =============================================================================
+  deploy:
+    runs-on: ubuntu-latest
+    needs: docker
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    environment: production
+    steps:
+      - name: Deploy notification
         run: |
-          if [ -f frontend/package.json ]; then
-            cd frontend
-            npm ci
-            npm run build
-          fi
+          echo "🚀 Deployment triggered for gAIng-Brain"
+          echo "Image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest"
+          # Add your deployment commands here (e.g., kubectl, ssh, etc.)
