--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,14 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
+    "date-fns": "^3.0.0",
+    "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "lucide-react": "^0.294.0",
     "recharts": "^2.10.3",
-    "date-fns": "^3.0.0"
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
