--- a/mcp/.env.example
+++ b/mcp/.env.example
@@ -1,4 +1,39 @@
-# Never commit real tokens.
-# Copy to mcp/.env locally if you use env files.
+# MCP Environment Configuration
+# ==============================
+# Copy this file to mcp/.env and fill in your values.
+# NEVER commit the actual .env file!
 
-GITHUB_TOKEN=your_pat_here
+# -----------------------------------------------------------------------------
+# GitHub API Access (Required for GitHub MCP server)
+# -----------------------------------------------------------------------------
+# Get your token from: https://github.com/settings/tokens
+# Required scopes: repo, read:org
+GITHUB_TOKEN=ghp_your_github_pat_here
+
+# -----------------------------------------------------------------------------
+# Optional: Web Search Server
+# -----------------------------------------------------------------------------
+# If using a web search MCP server
+# SERPAPI_KEY=your_serpapi_key_here
+# TAVILY_API_KEY=your_tavily_key_here
+
+# -----------------------------------------------------------------------------
+# Optional: Database Servers
+# -----------------------------------------------------------------------------
+# POSTGRES_URL=postgresql://user:pass@localhost:5432/db
+# SQLITE_PATH=./data/local.db
+
+# -----------------------------------------------------------------------------
+# Optional: Communication Servers
+# -----------------------------------------------------------------------------
+# SLACK_TOKEN=xoxb-your-slack-token
+# DISCORD_TOKEN=your-discord-token
+
+# -----------------------------------------------------------------------------
+# Server Configuration
+# -----------------------------------------------------------------------------
+# MCP server timeout in seconds
+MCP_TIMEOUT=30
+
+# Logging level: debug, info, warn, error
+MCP_LOG_LEVEL=info
